<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjoutArticleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/formulaire_ajout_article" />

                <EditText
                    android:id="@+id/et_nom_form_article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="@string/nom_article" />

                <EditText
                    android:id="@+id/etml_form_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:text="@string/description_article" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_category" />

                <Spinner
                    android:id="@+id/chooseCategorieAjoutArticle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/choose_category"
                    android:minHeight="48dp" />

                <Button
                    android:id="@+id/b_form_ajout_article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickAjoutArticle"
                    android:text="@string/add_article_text" />

                <Button
                    android:id="@+id/b_form_annulee_ajout_article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickCancelAjoutArticle"
                    android:text="@string/annulee" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>