<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_v_ligne_article"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="@dimen/min_heigt_menu"
                android:text="@string/nom_article" />

            <TextView
                android:id="@+id/nom_detail_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="@dimen/min_heigt_menu"
                android:text="@string/nom_article" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="@dimen/min_heigt_menu"
                android:text="@string/description_article" />

            <TextView
                android:id="@+id/description_detail_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="@dimen/min_heigt_menu"
                android:text="@string/description_article" />
        </LinearLayout>

        <TextView
            android:id="@+id/date_detail_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_heigt_menu"
            android:text="@string/date_creation" />

        <TextView
            android:id="@+id/id_categorie_article_ligne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_categorie_spinner" />

        <TextView
            android:id="@+id/id_user_article_ligne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_user_for_article" />

        <TextView
            android:id="@+id/id_article_ligne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_article_detail" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>